2011-11-08  Yuqiang Xian  <yuqiang.xian@intel.com>

        DFG 32_64 - update make lists for efl, gtk, and Qt ports with DFG change r99519
        https://bugs.webkit.org/show_bug.cgi?id=71768

        Reviewed by Geoffrey Garen.

        Also includes a fix to make the newly introduced AssemblyHelpers
        friend of JSValue as we need the Tag definitions.

        * CMakeListsEfl.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * runtime/JSValue.h:

2011-11-07  Yuqiang Xian  <yuqiang.xian@intel.com>

        Fix gcc 4.4 compilation warnings in DFG 32_64
        https://bugs.webkit.org/show_bug.cgi?id=71762

        Reviewed by Filip Pizlo.

        * dfg/DFGJITCodeGenerator.h:
        (JSC::DFG::JITCodeGenerator::registersMatched):

2011-11-07  Filip Pizlo  <fpizlo@apple.com>

        DFG code base should allow for classes not related to DFG::JITCompiler
        to use DFG idioms
        https://bugs.webkit.org/show_bug.cgi?id=71746

        Reviewed by Gavin Barraclough.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * dfg/DFGAssemblyHelpers.cpp: Added.
        (JSC::DFG::AssemblyHelpers::decodedCodeMapFor):
        (JSC::DFG::AssemblyHelpers::emitCount):
        (JSC::DFG::AssemblyHelpers::setSamplingFlag):
        (JSC::DFG::AssemblyHelpers::clearSamplingFlag):
        (JSC::DFG::AssemblyHelpers::jitAssertIsInt32):
        (JSC::DFG::AssemblyHelpers::jitAssertIsJSInt32):
        (JSC::DFG::AssemblyHelpers::jitAssertIsJSNumber):
        (JSC::DFG::AssemblyHelpers::jitAssertIsJSDouble):
        (JSC::DFG::AssemblyHelpers::jitAssertIsCell):
        * dfg/DFGAssemblyHelpers.h: Added.
        * dfg/DFGJITCompiler.cpp:
        * dfg/DFGJITCompiler.h:
        (JSC::DFG::JITCompiler::JITCompiler):
        (JSC::DFG::JITCompiler::graph):
        * dfg/DFGJITCompiler32_64.cpp:
        * dfg/DFGOSRExit.h: Added.
        (JSC::DFG::SpeculationRecovery::SpeculationRecovery):
        (JSC::DFG::SpeculationRecovery::type):