@@ -95,7 +95,6 @@ WEBKIT_FEATURE(ENABLE_VIDEO "Enable video" DEFAULT ON HTML)
 WEBKIT_FEATURE(ENABLE_WEB_SOCKETS "Enable web sockets" DEFAULT ON)
 WEBKIT_FEATURE(ENABLE_WORKERS "Enable workers" DEFAULT ON)
 WEBKIT_FEATURE(ENABLE_XSLT "Enable XSLT" DEFAULT ON)
-WEBKIT_FEATURE(ENABLE_DFG_JIT "Enable DFG JIT" DEFAULT OFF)
 
 OPTION(ENABLE_ECORE_X "Enable Ecore_X specific usage (cursor, bell)" ON)
 IF (ENABLE_ECORE_X)
